--- a/index.html
+++ b/index.html
@@ -49,20 +49,20 @@
         </a>
           <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
           <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="#">Advertising options</a>
-            <a class="dropdown-item" href="#">Creative Studio portfolio</a>
-            <a class="dropdown-item" href="#">Our team</a>
+            <a class="dropdown-item" href="#">Our journalists</a>
+            <a class="dropdown-item" href="#">About The Local</a>
+            <a class="dropdown-item" href="#">Europe's news in English</a>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">How we can help you</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Why Membership?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">Our audience</a>
+            <a class="nav-link js-scroll-trigger" href="#about">What you get</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Creative Studio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">How to join</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact us</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">What Members say</a>
           </li>
         </ul>
       </div>
@@ -73,8 +73,8 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Advertise with Europe’s largest audience of international professionals and expats</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Tell Me More</a>
+        <div class="intro-lead-in">Welcome to The Local</div>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Join our growing community</a>
       </div>
     </div>
   </header>
@@ -84,7 +84,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">How we can help you</h2>
+          <h2 class="section-heading text-uppercase">Why Membership?</h2>
           <h3 class="section-subheading text-muted">We believe in connecting professionals and expats who lead international lives to the world around them. Our journalism focuses on enhancing their lives through relevant content, products and services, like yours.</h3>
         </div>
       </div>
@@ -94,7 +94,7 @@
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-bullhorn fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Advertise with us</h4>
+          <h4 class="service-heading">What you get</h4>
           <p class="text-muted">Whether you’re in the business of expat services (eg. insurance, mortgages or tax), promoting jobs to English speakers, or you’re a consumer brand or otherwise looking to reach an international, expat audience, our platform is the right place for you.
 Here you can place banner ads, sponsored content and more.
 </p>
@@ -104,7 +104,7 @@ Here you can place banner ads, sponsored content and more.
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-users fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">Our audience</h4>
+          <h4 class="service-heading">How to join</h4>
           <p class="text-muted">Our expat audience is unlike any other globally. To reach them, the most successful approach, particularly in the ‘content is king’ era, is Native Advertising.</p>
         </div>
         <div class="col-md-4">
@@ -112,7 +112,7 @@ Here you can place banner ads, sponsored content and more.
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-info fa-stack-1x fa-inverse"></i>
           </span>
-          <h4 class="service-heading">What is native advertising?</h4>
+          <h4 class="service-heading">What our Members say</h4>
           <p class="text-muted">In a nutshell, native advertising is much like sponsored content. You will collaborate with The Local’s award winning Creative Studio team and combine your knowledge of products and markets with our understanding of expat advertising/reader behaviour and the content that they like.</p>
         </div>
       </div>
