--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
             <a class="dropdown-item" href="#">About The Local</a>
             <a class="dropdown-item" href="#">Europe's news in English</a>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Why Membership?</a>
+            <a class="nav-link js-scroll-trigger" href="#membership">Why Membership?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">What you get</a>
+            <a class="nav-link js-scroll-trigger" href="#package">What you get</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">How to join</a>
+            <a class="nav-link js-scroll-trigger" href="#join">How to join</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">What Members say</a>
+            <a class="nav-link js-scroll-trigger" href="#testimonials">What Members say</a>
           </li>
         </ul>
       </div>
@@ -73,14 +73,95 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in">Welcome to The Local</div>
+        <div class="intro-lead-in">Welcome to The Local Membership</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Join our growing community</a>
       </div>
     </div>
   </header>
 
-  <!-- Services -->
-  <section id="services">
+  <!-- Why Membership? -->
+  <section id="membership">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Why Membership?</h2>
+          <h3 class="section-subheading text-muted">The Local is made by and for internationals living abroad. We are our audience.And we need your support.</h3>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="subheading">Once upon a time</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">In 2004, a newsletter sent to 12 people in a language class became the first edition of The Local. .</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="subheading">Fast forward 15 years</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">The Local now has 5.5 million monthly readers across nine country sites.</p>
+                </div>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="subheading">Most importantly</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">Our community includes more than 10,000 paying Members.
+</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4 class="subheading">The reality</h4>
+                </div>
+                <div class="timeline-body">
+                  <p class="text-muted">As internet giants gobble up ad revenue, this financial support is crucial to our survival.</p>
+                </div>
+              </div>
+            </li>
+            <li class="timeline-inverted">
+              <div class="timeline-image">
+                <h4>Be Part
+                  <br>Of Our
+                  <br>Story!</h4>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+
+
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -156,284 +237,15 @@ Here you can place banner ads, sponsored content and more.
   </section>
 
   <!-- About -->
-  <section id="about">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our audience and us</h2>
-          <h3 class="section-subheading text-muted">We are our audience. The Local is made by and for internationals living abroad. From humble beginnings in 2004, we now have 5 million+ monthly readers.</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-12">
-          <ul class="timeline">
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="subheading">Our readers are highly educated</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">92% of our readers have at least a college/university degree. 43% have a Masters degree or equivalent.</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="subheading">They are increasingly engaged</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">More than 60,000 people have signed up for our newsletters and over 10,000 of our readers have become paying Members of The Local in just over a year.</p>
-                </div>
-              </div>
-            </li>
-            <li>
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="subheading">The Local's readers wield influence</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">27% are senior decision-makers. 24% have an annual income of €75,000 or higher. 58% work in organisations with over 100 employees</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
-              </div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="subheading">They know where to go for news</h4>
-                </div>
-                <div class="timeline-body">
-                  <p class="text-muted">
-72% trust The Local as their primary news source</p>
-                </div>
-              </div>
-            </li>
-            <li class="timeline-inverted">
-              <div class="timeline-image">
-                <h4>Be Part
-                  <br>Of Our
-                  <br>Story!</h4>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
+  <section id="package">
 
 
   <!-- Team -->
 
-  <section class="bg-light" id="team">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our team</h2>
-          <h3 class="section-subheading text-muted">Talk to The Local's multi-lingual and multi-talented sales team about the right package for your needs.</h3>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-            <h4>Anna Agebjörn</h4>
-            <p class="text-muted">Key Account Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Liz Dennys</h4>
-            <p class="text-muted">Key Account Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-            <h4>James Rushford</h4>
-            <p class="text-muted">Key Account Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt="">
-            <h4>Anna Agebjörn</h4>
-            <p class="text-muted">Key Account Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
-            <h4>Liz Dennys</h4>
-            <p class="text-muted">Key Account Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="team-member">
-            <img class="mx-auto rounded-circle" src="img/team/3.jpg" alt="">
-            <h4>James Rushford</h4>
-            <p class="text-muted">Key Account Manager</p>
-            <ul class="list-inline social-buttons">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-twitter"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-facebook-f"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-lg-8 mx-auto text-center">
-          <p class="large text-muted">
-We will work with you to find the best angle and format for your message.
-Our Award winning team will create the content, publish it on our sites and promote it through our social media channels.
-Once the content is out there, our experienced team will analyse & optimise continually to drive the response you need, whether that is to drive awareness, influence or traffic.
-</p>
-        </div>
-      </div>
-    </div>
-  </section>
+  <section id="join">
 
-  <!-- Clients -->
-  <section class="py-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/envato.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/designmodo.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/themeforest.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-md-3 col-sm-6">
-          <a href="#">
-            <img class="img-fluid d-block mx-auto" src="img/logos/creative-market.jpg" alt="">
-          </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section id="contact">
+  <!-- Testimonials -->
+  <section id="testimonials">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
